# EvoMind

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  TOOL_USAGE_QUICKSTART.md  pyproject.toml  requirements.txt  run_ui.sh  setup.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  EXAMPLES.md  NETWORK_ACCESS.md  USING_TOOLS.md
evomind/: __init__.py  api.py  cli.py
evomind/agent/: __init__.py  controller.py  planner.py  state.py
evomind/codegen/: __init__.py  generator.py  validators.py
evomind/llm/: __init__.py  gemini_client.py
evomind/observability/: __init__.py  logging.py  metrics.py
evomind/registry/: __init__.py  tool_registry.py
evomind/sandbox/: __init__.py  executor.py  policies.py
evomind/utils/: __init__.py  config.py  retry.py  validators.py
examples/: advanced_usage.py  basic_usage.py  registry_example.py  reuse_tools.py  using_tools.py
tests/: test_agent.py  test_codegen.py  test_planner.py  test_registry.py  test_sandbox.py
ui/: README.md  app.py
